--- a/assets/css/argon.css
+++ b/assets/css/argon.css
@@ -14751,6 +14751,7 @@ a.text-darker:focus
         box-shadow: none !important; 
         text-shadow: none !important;
     }
+    $
     a:not(.btn)
     {
         text-decoration: underline;
